# Rusty-Framework

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/app/: index.html
e2e/tests/: harness.ts
e2e/tests/widgets/: button.spec.ts  card.spec.ts  input.spec.ts  layout.spec.ts  text.spec.ts
examples/: counter.rs  hello_world.rs
rusty/: Cargo.toml
rusty-docs/: Cargo.toml  build.rs
rusty-docs/docs/01_getting_started/: 01_introduction.md  02_installation.md  03_basics.md
rusty-docs/docs/02_concepts/: 01_views.md  02_widgets.md  03_hooks.md  04_state.md  05_effects.md  06_layout.md
rusty-docs/docs/03_widgets/: 01_button.md  02_text_block.md  03_layout.md  04_card.md  05_table.md  06_inputs.md  07_dialog.md  08_badge.md  09_progress.md  10_tooltip.md
rusty-docs/docs/04_api_reference/: 01_prelude.md
rusty-docs/src/: main.rs  server.rs
rusty-macros/: Cargo.toml
rusty-macros/src/: lib.rs
rusty-samples/: Cargo.toml
rusty-samples/src/: app_shell.rs  main.rs  sample_base.rs  server.rs
rusty-samples/src/apps/: mod.rs
rusty-samples/src/apps/concepts/: context_app.rs  effect_app.rs  interval_app.rs  memo_app.rs  mod.rs  reducer_app.rs  state_app.rs
rusty-samples/src/apps/demos/: counter_app.rs  hello_app.rs  mod.rs  todo_app.rs
rusty-samples/src/apps/widgets/: badge_app.rs  button_app.rs  card_app.rs  dialog_app.rs  input_app.rs  layout_app.rs  mod.rs  progress_app.rs  table_app.rs  tooltip_app.rs
rusty-server/: Cargo.toml
rusty-server/src/: main.rs
rusty/src/: lib.rs
rusty/src/core/: diff.rs  event_registry.rs  mod.rs  reconciler.rs  runtime.rs  view_tree.rs
rusty/src/hooks/: deps.rs  hook_store.rs  mod.rs  use_callback.rs  use_context.rs  use_effect.rs  use_interval.rs  use_memo.rs  use_reducer.rs  use_ref.rs  use_state.rs
rusty/src/server/: mod.rs  session.rs  ws.rs
rusty/src/shared/: color.rs  icon.rs  mod.rs  types.rs
rusty/src/views/: mod.rs  view.rs
rusty/src/widgets/: badge.rs  button.rs  card.rs  dialog.rs  input.rs  layout.rs  mod.rs  progress.rs  table.rs  text.rs  tooltip.rs
src/frontend/: playwright.config.ts  vite.config.mjs
src/frontend/src/: vite-env.d.ts
src/frontend/src/components/: GraphvizRenderer.tsx  JsonRenderer.tsx  MermaidRenderer.tsx
src/frontend/src/components/ui/: multiselect.tsx  tooltip.tsx
src/frontend/src/lib/: shortcut.test.ts  shortcut.ts  shortcutRegistry.ts  useShortcut.ts
src/frontend/src/lib/__tests__/: shortcutRegistry.test.ts  styles.test.ts  useShortcut.test.ts
src/frontend/src/widgets/breadcrumbs/: BreadcrumbsWidget.tsx
src/frontend/src/widgets/button/: ButtonShortcut.test.ts
src/frontend/src/widgets/charts/: ChordChartWidget.tsx  FunnelChartWidget.tsx  GaugeChartWidget.tsx  PieChartWidget.tsx  RadarChartWidget.tsx  SankeyChartWidget.tsx  chartTypes.ts  (+1 more)
(+48 files in other folders)
