[package]
name = "rusty-docs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rusty-docs"
path = "src/main.rs"

[dependencies]
rusty = { path = "../rusty" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
