[package]
name = "rusty-samples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rusty-samples"
path = "src/main.rs"

[dependencies]
rusty = { path = "../rusty" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
