[package]
name = "rusty-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standalone server binary for Rusty-Framework applications"

[dependencies]
rusty = { path = "../rusty" }
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
