[package]
name = "rusty"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core framework for building full-stack web applications in Rust"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
futures.workspace = true
uuid.workspace = true
tracing.workspace = true
rusty-macros = { path = "../rusty-macros" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
